# XML

./: .#testGC.R  .Rbuildignore  Aside.md  Bugs.html  ChangeLog  Changes  Check  CodeDetails  DESCRIPTION  DESCRIPTION.in  DiffWithCRAN  DocParse.c  EventParse.c  ExpatParse.c  FAQ.html  FIXME_NOW  GNUmakefile  GNUmakefile.admin  HTMLParse.c  INSTALL.R  INSTALL_S  LICENSE  Makevars.in  NAMESPACE  NAMESPACE.in  NodeFuns  NodeGC.c  NodeGC.h  Notes  README  RSDTD.c  RS_XML.h  RUtils.c  SUtils.c  TAGS  Todo-orig.html  Todo.xml  Utils.c  Utils.h  VersionInfo  (+27 more)
Bugs/: XMLStuff
Ctest/: GNUmakefile  rogerK  rogerK.R  rogerK.c  text.c
Docs/: CreatingXML.xml  GNUmakefile  GeneralHandlers.xml  GeneratingXML.nw  InternalDOM.nw  MathML.nw  MathML.xml  MemoryManagement.html  ModernDoc.Rdb  ModernDoc.html  OOP.nw  Outline.nw  Outline.xml  RS.xml  RSHelp.xml  RSXML.nw  RXML.xml  SSource.xml  Schema.xml  Tour.nw  Tour.xml  WritingXML.html  bibliog.bib  description.nw  description.xml  exercises.xml  htmlTable.xml  job.xml  literate.nw  manual.nw  manual.xml  memory.tex  navigation.xml  shortIntro.xml
Install/: DESCRIPTION  DESCRIPTION.in  GNUmakefile.Splus.in  GNUmakefile.admin  INSTALL  INSTALL.in  Makevars.in  Makevars.win  VersionInfo  cleanup  config.status  configure  configure.in  configureInstall  configureInstall.in  testRemoveFinalizers.c
Install/Web/: GNUmakefile  README  Requirements.html  config.status  configure  configure.in  index.html  index.html.in
Install/Web/autom4te.cache/: output.0  requests  traces.0
Install/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Old/: configure.in
Problems/: eventParseTrim.bz2  mytest.mzXML  test.R  test.mzXML  trim.R  trim.xml
QuestionSolutions/NeuroRetina/: tracing.xml
R/: AAA.R  SAXMethods.S  XMLClasses.R  assignChild.R  bitList.R  error.R  flatTree.R  getDependencies.R  getRelativeURL.R  getXIncludes.R  hashTree.R  htmlLinks.R  htmlParse.R  keyValueDB.R  namespaces.R  nodeAccessors.R  parser.R  readHTMLTable.R  reflection.R  saveXML.R  schema.R  schema.S  setHRef.R  solrDocs.R  summary.R  supports.R  supports.R.in  tangle1.R  toString.R  toString.S  tree.R  version.R  xincludeFuns.R  xincludes.R  xmlEventParse.R  xmlIncludes.R  xmlInternalSource.R  xmlMemoryMgmt.R  xmlNodes.R  xmlOutputBuffer.R  (+4 more)
Rsamples/: addChildren.R
Src/: #readHTMLTable.R#  SAXMethods.S  XMLClasses.R  bitList.R  catalog.R  encoding.R  error.R  fixNS.R  hashTree.R  htmlParse.R  keyValueDB.R  namespaces.R  nodeAccessors.R  readHTMLTable.R  reflection.R  saveXML.R  schema.S  tree.R  xincludes.R  xmlInternalSource.R  xmlNodes.R  xmlOutputBuffer.R  xmlOutputDOM.R  xmlTreeParse.R
TU/: GNUmakefile  enums.R  errors.R  libxml2.c  libxml2.c.001t.tu  tu.R  xmlsec.c  xmlsec.c.t00.tu
XML.Rcheck/: 00install.out  XML-Ex.R  XML-Ex.Rout  out.xml  tmp.rda
XML.Rcheck/XML/: DESCRIPTION  INDEX  NAMESPACE  README.windows
XML.Rcheck/XML/Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
XML.Rcheck/XML/R/: XML.rdb  XML.rdx
XML.Rcheck/XML/exampleData/: DatasetByRecord.dtd  DatasetByVariable.dtd  author.xml  author2.xml
XML.Rcheck/XML/help/: AnIndex  XML.rdb  XML.rdx  aliases.rds  paths.rds
XML.Rcheck/XML/html/: 00Index.html
XML.Rcheck/XML/scripts/: RSXML.bsh  RSXML.csh
XML.Rcheck/tests/: gc.Rout  gc1.Rout  gc2.Rout  parent.Rout  testNew.Rout  toList.Rout  tt.Rout
autom4te.cache/: output.0  requests  traces.0
expat/: GNUmakefile  GNUmakefile.lib
expat/xmlparse/: GNUmakefile
expat/xmltok/: GNUmakefile
inst/exampleData/: author_invalid.xml  charactersByEntity.xml
inst/examples/: A.xml  B.xml  C.xml  X.xml  Y.xml  gettingStarted.html  multi.md  multi.xml  other.xml
libxml/: GNUmakefile  PATCH.attribute
man/: AssignXMLNode.Rd  Doctype-class.Rd  Doctype.Rd  SAXMethods.Rd  SAXState-class.Rd  XMLAttributes-class.Rd  XMLCodeFile-class.Rd  XMLInternalDocument.Rd  XMLNode-class.Rd  addChildren.Rd  addNode.Rd  addSibling.Rd  append.XMLNode.Rd  asXMLNode.Rd  asXMLTreeNode.Rd  catalogResolve.Rd  catalogs.Rd  coerce.Rd  compareXMLDocs.Rd  docName.Rd  dtdElement.Rd  dtdElementValidEntry.Rd  dtdIsAttribute.Rd  dtdValidElement.Rd  ensureNamespace.Rd  findXInclude.Rd  fixDocXIncludes.Rd  free.Rd  genericSAXHandlers.Rd  getChildrenStrings.Rd  getEncoding.Rd  getHTMLLinks.Rd  getLineNumber.Rd  getNodeSet.Rd  getRelativeURL.Rd  getXIncludes.Rd  getXMLErrors.Rd  isXMLString.Rd  length.XMLNode.Rd  libxmlVersion.Rd  (+59 more)
myTests/: KurtEncoding.R  SAXEndElement.R  add.R  addToDoc.R  assignChild.R  attrNS.R  base.xml  baseInclude.xml  baseURI.R  branch.xml  branch2.R  checkRefCounts.R  childStrings.R  childStrings.xml  classes.R  clearMemMgmt.R  copyAcross.R  docNode.R  dupNS.R  encoding.R  entities.c  errorHandlers.R  eventEncoding.R  foo.htm  format.xml  gc.R  gc1.R  gc2.R  gc4.R  gc6.R  gc7.R  getNodeSetNamespaces.R  hashT.R  hashTree.R  hashTree.xml  iso.R  iso_639_3.xml  latin.R  latin.txt  m49alpha.htm  (+42 more)
myTests/gc/: Makevars  children.R  comm.R  comment.R  gcDoc.R  parent.R  procXInclude.R  remove.R  schema.R  testgc.R  testgc.c  text.R
src/: DocParse.c  DocParse.h  EventParse.c  EventParse.h  ExpatParse.c  ExpatParse.h  HTMLParse.c  Makevars.in  Makevars.win  NodeGC.c  RSCommon.h  RSDTD.c  RSDTD.h  RS_XML.h  RUtils.c  Rcatalog.c  Utils.c  Utils.h  XMLEventParse.c  XMLHashTree.c  XMLTree.c  fixNS.c  libxmlFeatures.c  schema.c  xmlsecurity.c  xpath.c
src/SPlus/: SUtils.h
tests/: GNUmakefile  KurtEncoding.R  SAXEndElement.R  SAXstate.S  addChildrenDoc.R  addRootSibling.R  assignChild.R  attributeNS.R  attrs.R  branchFree.R  clearMemMgmt.R  clone.R  colClasses.R  copyNodes.R  directIndex.R  encoding.R  encoding1.R  encoding2.R  entities  error.R  fixDefaultNS.R  gc3.R  gc5.R  gc8.R  gc9.R  gcBranches.R  gs.R  input_dafirstname_cheo.xml  large.xml  namespaceAxis.R  namespaceCreate.R  namespaceRefs.R  namespaces.R  nestNS.R  node.R  nsDummy.R  pull.S  pull.c  readHTMLTable.R  removeNamespaces.R  (+15 more)
tests/gc/: addChild.c  dom.R  getNodeSet.R  newDocDTD.R  newXMLDoc.R  parent1.R  simpleAdd.R  xinclude.R
